k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}
  labels:
    app: ${APP_NAME}
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      containers:
        - name: r-shiny-server
          image: ${DOCKER_REGISTRY}/${DOCKER_USER}/${APP_NAME}:git-${GIT_SHA}
          ports:
          - containerPort: 3838
      imagePullSecrets:
        - name: quay-kerin
