k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APPNAME}
  labels:
    app: ${APPNAME}
spec:
  sessionAffinity: ClientIP
  selector:
    app: ${APPNAME}
  ports:
  - port: 80
    targetPort: 3838
