k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ${APP_NAME}.${BASE_APP_HOST}
    secretName: ${APP_NAME}-tls
  rules:
  - host: ${APP_NAME}.${BASE_APP_HOST}
    http:
      paths:
      - backend:
          serviceName: ${APP_NAME}
          servicePort: 80
        path: /
